# wavenet

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: ignore_file.py  main.py  test.ipynb
src/data/: dataset.py
src/model/: blocks.py  inference.py  layers.py  train.py
tests/: test_main.py
